# nuke-backend

./: Cargo.toml
src/: lib.rs  main.rs
src/data/: credential.rs  error.rs  mod.rs
src/entity/: mod.rs  oauth_client.rs  user.rs
src/handler/: login.rs  mod.rs  oauth.rs  profile.rs  register.rs
src/utils/: captcha.rs  db.rs  email.rs  encryption.rs  mod.rs  redis.rs
templates/: email_verification.html
