[package]
name = "websxz-accounts-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
jsonwebtoken = "9.3.0"
sea-orm = { version = "1.0.1", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
once_cell = "1.20.0"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
serde_json = "1.0.128"
tracing = "0.1.40"
chrono = "0.4.38"
tracing-subscriber = "0.3.18"
dotenv = "0.15.0"
reqwest = "0.12.8"
sha2 = "0.10.8"
redis = "0.27.2"
rand = "0.8.5"
lazy_static = "1.5.0"
validator = { version = "0.18.1", features = ["derive"] }
lettre = "0.11.9"
askama = "0.12.1"
